# Work-scripts

./: .clang-format  .gitignore  README.md
common_scripts/: 001_显示CPU厂商信息.sh  002_查找Linux系统中的僵尸进程.sh  003_生成随机密码_UUID版本-16进制密码.sh  004_进度条.sh  005_获取MAC地址.sh  006_打印各种时间.sh  007_soft_quick_start.sh  008_code_format.sh  0_test.sh  1_template.sh
docker_scripts/: into_docker.sh  make_image.sh  start_docker.sh  stop_docker.sh
others/rviz_perception/: blind_perception.rviz  calibration_lsq.rviz  dogm_perception.rviz  lidar_rawdata.rviz  perception_lsq.rviz  perception_lsq_latest.rviz  prediction_sim.rviz  radar_lsq.rviz  trafficlight_lsq.rviz
project_scripts/project_scp/: lsq_scp.sh
project_scripts/rosbag_copy/: README.md  copyBags.sh  rosbag_copy.sh
project_scripts/rosbag_record/: play_bag_for_KTD.sh  record_for_KTD.sh  record_latest.sh
project_scripts/ssh_pub/: make_env.sh  setup_env.sh
project_scripts/start_avos/: rc.local  start_avos.sh
work_space/cplusplus_ws/lidar2camera/: 1_智行者数据相关疑问.docx
work_space/cplusplus_ws/lidar2camera/code/lidar2camera_0720/docker/x86/: into_docker.sh  make_image.sh  start_docker.sh  stop_docker.sh
work_space/cplusplus_ws/lidar2camera/code/lidar2camera_0720/point2image/: CMakeLists.txt  README.md
work_space/cplusplus_ws/lidar2camera/code/lidar2camera_0720/point2image/include/: point2image.h
work_space/cplusplus_ws/lidar2camera/code/lidar2camera_0720/point2image/src/: main.cpp  point2image.cpp
work_space/cplusplus_ws/lidar2camera/code/lidar2camera_0720/test_data/BC25_camera_params_latest_0715/: front_h30_extrinsics.yaml  front_h30_intrinsics.yaml  front_h60_extrinsics.yaml  front_h60_intrinsics.yaml  left_h90_extrinsics.yaml  right_h90_extrinsics.yaml  right_h90_intrinsics.yaml
work_space/cplusplus_ws/lidar2camera/code/lidar2camera_0720/test_data/LiDAR_pcd/: 1657079195300.pcd  1657079207300.pcd  1657079212200.pcd  1657079232500.pcd
work_space/cplusplus_ws/lidar2camera/code/load_pcd/src/: load_pcd.cpp
work_space/cplusplus_ws/lidar2camera/客户代码/lidar2camera/: 1656648480600.pcd  left_h90_intrinsics.yaml  vehicle_sensor_calibration.conf  zxz_velo2cam_lef_back.py  zxz_velo2cam_left.py
work_space/python_ws/: README.md  common_env.yaml
work_space/python_ws/idriver_merge_bag_2.0/: README.md  environment.yaml  main.py  merge_bag.py  setup.py
work_space/python_ws/rosbag_decode/: README.md  data_process.py  decode_rosbag_for_CHELIAN.py  decode_rosbag_for_KTD.py  decode_rosbag_for_project.py  decode_rosbag_latest.py  environment.yaml  requirements.txt
work_space/ros_ws/src/: .clang-format
work_space/ros_ws/src/load_pcd/: CMakeLists.txt  package.xml
work_space/ros_ws/src/load_pcd/rviz/: pointshow.rviz
work_space/ros_ws/src/load_pcd/src/: load_pcd.cpp
work_space/ros_ws/src/point2image/: .gitignore  CMakeLists.txt  README.md
work_space/ros_ws/src/point2image/include/: point2image.h
work_space/ros_ws/src/point2image/launch/: point2image.launch
work_space/ros_ws/src/point2image/src/point2image/: point2image_core.cpp  point2image_node.cpp
